# mandelbrot

./: CMakeLists.txt  README.md  ViewCoords.hpp  attic.cpp  big_small.hpp  center_finder.cpp  center_finder.hpp  circle.cpp  circle.hpp  complex.hpp  fractal.h  fractal.hpp  high_precision_real.hpp  high_precision_tests.cpp  layer.cpp  layer.hpp  mandelbrot.cpp  mandelbrot.hpp  mandelbrot_calculation.hpp  mandeldrop.cpp  orbit.hpp  percentile.hpp  plane.hpp  rendering_sequence.cpp  rendering_sequence.hpp  small_double.hpp  tests.cpp  tutorial.cpp  view_coords.cpp  view_coords.hpp
doc/: idea.md  idea2.md  orbit_resetting.md  orbit_tree.md  shading.md  taylor_series.md
include/: biassed_real.hpp  bla.hpp  calculation_metrics.hpp  calculation_pixmap.hpp  circle.hpp  closest_map.hpp  complex.hpp  complex_number.hpp  convert.hpp  convert_fwd.hpp  exponented_real.hpp  fractal.hpp  fractal_calculation.hpp  fwd.hpp  generate_fractal.hpp  gradient_stack.hpp  high_exponent_real.hpp  high_precision_real.hpp  layer.hpp  magic_algorithm.hpp  make_fractal.hpp  mandelbrot.hpp  mandelbrot_adaptor.hpp  mandelbrot_calculation.hpp  mandelbrot_fwd.hpp  number_cast.hpp  number_traits.hpp  orbit.hpp  orbit_manager.hpp  orbit_tree.hpp  percentile.hpp  pixmap.hpp  plane.hpp  pointwise_calculation.hpp  pointwise_fractal.hpp  radius.hpp  real_number.hpp  reference_orbit_manager.hpp  rendering_sequence.hpp  shader.hpp  (+8 more)
include/numbers/: complex_number.hpp  number_cast.hpp  radius.hpp  real_number.hpp
src/: CMakeLists.txt  calculation_pixmap.cpp  experiment.cpp  gradient_stack.cpp  layer.cpp  mandelbrot.cpp  mandeldrop.cpp  radius.cpp  rendering_sequence.cpp  shader.cpp  shader_impl.cpp  view.cpp  view_animation.cpp  view_coords.cpp  view_parameters.cpp  view_pixmap.cpp
test/: CMakeLists.txt  arithmetic_tests.cpp  bench.cpp  circle.cpp  high_precision_tests.cpp  parser_tests.cpp  tests.cpp  tutorial.cpp
